--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-This paper uses the angular power spectrum of luminous red galaxies (LRGs) selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our dataset comprises over $14$ million LRG targets, spanning approximately $18,000$ square degrees of the sky, with redshifts ranging from $0.2< z < 1.35$. The FFTLog algorithm is employed to enable modeling the power spectrum on large scales. Galactic extinction, survey depth, and astronomical seeing are identified as the primary sources of systematic error using feature selection and cross-correlation techniques. Artificial neural networks are applied to alleviate excess clustering signals on large scales. Our treatment methods are tested and calibrated rigorously against lognormal density simulations with $\fnl=0$ and $76.9$, and systematic effects included. Assuming halo bias only depends on mass, we find $36.08~(25.03) < \fnl < 61.44~(75.64)$ at $68\%$~($95\%$) confidence. Our constraints weaken to $13.10~(-15.96) < \fnl < 69.14~(91.84)$ if the spurious fluctuations in the galaxy density field are regressed out against all available imaging systematic maps. We also test the robustness of the $\fnl$ constraints against different assumptions and variations in the data analysis pipeline, only finding significant photometric calibration issues in the South Galactic Cap below declination of $-30$. Assuming Planck's constraint on the value of $\fnl$ is accurate a priori, our best fit estimates of $\fnl \sim 47-50$ provide evidence for some unknown calibration issues which cannot be addressed with available imaging maps. Our results show that constraining $\fnl$ requires a careful analysis of imaging systematic effects and a thorough understanding of astrophysical factors that impact the measured clustering signal on large scales. \mr{While more theoretical work and simulations are required to better understand halo assembly bias, our results motivate follow-up studies of $\fnl$ with DESI spectroscopic samples, which are less prone to contamination issues and provide a more uniform selection of galaxies.}
+This paper uses the angular power spectrum of luminous red galaxies (LRGs) selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to constrain the local primordial non-Gaussianity parameter $\fnl$. Our sample comprises over $14$ million LRG targets, spanning approximately $18,000$ square degrees of the sky, with redshifts ranging from $0.2< z < 1.35$. Galactic extinction, survey depth, and astronomical seeing are identified as the primary sources of systematic error using feature selection and cross-correlation techniques. Linear regression and artificial neural networks are applied to mitigate systematics and alleviate excess clustering signals on large scales. Our treatment methods are tested and calibrated rigorously against lognormal density simulations with and without $\fnl$ and systematic effects, indicating the neural network treatment outperforms linear regression in reducing remaining systematics in the DESI LRG sample. \mr{Assuming halo bias only depends on mass}, we find $\fnl = 47^{+14~(+29)}_{-11~(-22)}$ at $68\%$~($95\%$) confidence. Applying a more aggressive systematics treatment that includes regression against the full set of imaging maps we identified, our maximum likelihood value changes only slightly to $\fnl \sim 50$, but the uncertainty on $\fnl$ increases due to the aggressive treatment removing large-scale clustering information. We apply a series of robustness tests (e.g., cuts on imaging, declination, or scales) that show remarkable consistency in the obtained constraints. Our fiducial result can either be interpreted as a strong detection of non-zero $\fnl$, inconsistent with what is measured from Planck, or evidence for unknown sources of variation in the observed galaxy density (e.g., from calibration errors in photometric zeropoint determination or in Galactic extinction corrections). Our results motivate follow-up studies of $\fnl$ with DESI spectroscopic samples, where the inclusion of 3D clustering modes should help separate imaging systematics.
 \end{abstract}
