--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,10 +1,10 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$,  Hui Kong$^{5}$,  Anna Porredon$^{5}$,\newauthor
-Lado Samushia$^{1}$, Edmond Chaussidon$^{6}$, Alex Krolewski$^{7,8,9}$, Arnaud de Mattia$^{6}$,\newauthor
-Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{10}$, Jose Bermejo-Climent$^{11}$, Florian Beutler$^{12}$,\newauthor 
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$,  Hui Kong$^{5}$,  Anna Porredon$^{6}$,\newauthor
+Lado Samushia$^{1}$, Edmond Chaussidon$^{7}$, Alex Krolewski$^{8,9, 10}$, Arnaud de Mattia$^{7}$,\newauthor
+Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{11}$, Jose Bermejo-Climent$^{12}$, Florian Beutler$^{6}$,\newauthor 
 Klaus Honscheid$^{2,13}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{16}$,\newauthor
-Nathalie Palanque-Delabrouille$^{4,6}$, Will Percival$^{7,8,9}$, Christophe Yeche$^{6}$
+Nathalie Palanque-Delabrouille$^{4,7}$, Will Percival$^{8,9,10}$, Christophe Yeche$^{7}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
@@ -12,13 +12,13 @@ $^{2}$Center for Cosmology and AstroParticle Physics, The Ohio State University,
 $^{3}$Department of Physics and Astronomy, Ohio University, Athens, OH 45701, USA\\
 $^{4}$Lawrence Berkeley National Laboratory, 1 Cyclotron Road, Berkeley, CA 94720, USA\\
 $^{5}$ Institut de  F\'isica d'Altes Energies, The Barcelona Institute of Science and Technology, Campus UAB, 08193 Bellaterra (Barcelona), Spain\\
-$^{6}$ IRFU, CEA, Universite Paris-Saclay, F-91191 Gif-sur-Yvette, France\\
-$^{7}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
-$^{8}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\
-$^{9}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
-$^{10}$Korea Astronomy and Space Science Institute, Yuseong-gu, Daedeok-daero 776, Daejeon 34055, Republic of Korea\\
-$^{11}$ ??? \\
-$^{12}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\
+$^{6}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\
+$^{7}$ IRFU, CEA, Universite Paris-Saclay, F-91191 Gif-sur-Yvette, France\\
+$^{8}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
+$^{9}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\
+$^{10}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
+$^{11}$Korea Astronomy and Space Science Institute, Yuseong-gu, Daedeok-daero 776, Daejeon 34055, Republic of Korea\\
+$^{12}$ ??? \\
 $^{13}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
 $^{14}$Institute of Cosmology and Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth PO1 3FX, UK \\
 $^{15}$Department of Physics \& Astronomy, University of Sussex, Brighton BN1 9QH, UK\\
