--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,21 +1,21 @@
 \section{Scale dependent systematics}\label{sec:scalesys}
-We investigate the dependence of statistical significance for the cross power spectrum $\chi^{2}$ between the DR9 LRG targets and imaging maps. We extend the highest harmonic mode from $\ell=20$ to $100$, which corresponds to density fluctuations on scales below $2$ degrees. As shown in Figure \ref{fig:chi2cellextend}, the solid line represents the median of the cross power spectrum $\chi^{2}$ measured from the $\fnl=0$ mocks as a function of highest mode, $\ell_{\rm max}$ increases from $20$ to $100$. The red circles and blue crosses show the chi2 values for our sample cleaned respectively with the linear and neural network approaches, both with \textit{three maps}.  This test supports that our cross spectrum $\chi^{2}$ values are stable. 
+We investigate the dependence of statistical significance for the cross power spectrum $\chi^{2}$ between the DESI LRG targets and imaging maps. We extend the highest harmonic mode from $\ell=20$ to $100$, which corresponds to density fluctuations on scales below $2$ degrees. As shown in Figure \ref{fig:chi2cellextend}, the solid line represents the median of the cross power spectrum $\chi^{2}$ measured from the $\fnl=0$ mocks as a function of highest mode, $\ell_{\rm max}$ increases from $20$ to $100$. The red circles and blue crosses show the chi2 values for our sample cleaned respectively with the linear and neural network approaches, both with \textit{three maps}.  This test supports that our cross spectrum $\chi^{2}$ values are stable. 
 
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{chi2lmax.pdf}
-\caption{The cross power spectrum $\chi^{2}$ between the LRG density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and nonlinear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
+\caption{The cross power spectrum $\chi^{2}$ between the LRG density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and non-linear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
 \end{figure}
 
 
 \section{Lognormal mocks}
-Corner plots of the PNG parameter $\fnl$ and bias coefficient are shown in Fig. \ref{fig:mcmc_mocks0} for fitting the mean power spectrum of mocks, with and without $\fnl$. Best fit estimates, marginalized mean, $1\sigma$ and $2\sigma$ confidence intervals are summarized in Tab. \ref{tab:mocksmcmc}. Fig \ref{fig:mcmc_mocks0} (right) shows confidence contours for different combinations of target variable (e.g., either power spectrum or its log transform) and covariance matrix. First we attempt to understand the impact of covariance on confidence intervals. We fit the mean power spectrum of $\fnl=76.9$ mocks or its log transformation using covariance matrices constructed from the same set of mocks or from the $\fnl=0$ mocks. When covariance is consistent with mean, the difference between fitting power spectrum and log of it is only 2\%. If a wrong covariance is used for the log power, the effect is only $7\%$. However, when mean power spectrum of the $\fnl=76.9$ mocks is fit using the covariance matrix estimated from the $\fnl=0$ mocks, the constraints improve by a factor of $5$, simply due to a false higher signal to noise ratio. Therefore, we argue that fitting logarithm of power spectrum would remove the need for having $\fnl$-dependent covariance matrices and make the constraints less sensitive to covariance construction. Fig. \ref{fig:mcmc_mocks0} shows the confidence contours for $\fnl=0$ mocks when fit is done to the log of mean spectra of $\fnl=0$ mocks for the different regions. We find that the underlying true $\fnl$ value is recovered within $2\sigma$ confidence. \mr{Add a paragraph for the constraining power vs fsky}.
+Corner plots of the PNG parameter $\fnl$ and bias coefficient are shown in Fig. \ref{fig:mcmc_mocks0} for fitting the mean power spectrum of mocks, with and without $\fnl$. The best-fitting estimates, marginalized mean, $1\sigma$ and $2\sigma$ confidence intervals are summarized in Tab. \ref{tab:mocksmcmc}. Fig \ref{fig:mcmc_mocks0} (right) shows confidence contours for different combinations of target variable (e.g., either power spectrum or its log transform) and covariance matrix. First we attempt to understand the impact of covariance on confidence intervals. We fit the mean power spectrum of $\fnl=76.9$ mocks or its log transformation using covariance matrices constructed from the same set of mocks or from the $\fnl=0$ mocks. When covariance is consistent with mean, the difference between fitting power spectrum and log of it is only 2\%. If a wrong covariance is used for the log power, the effect is only $7\%$. However, when mean power spectrum of the $\fnl=76.9$ mocks is fit using the covariance matrix estimated from the $\fnl=0$ mocks, the constraints improve by a factor of $5$, simply due to a false higher signal to noise ratio. Therefore, we argue that fitting logarithm of power spectrum would remove the need for having $\fnl$-dependent covariance matrices and make the constraints less sensitive to covariance construction. Fig. \ref{fig:mcmc_mocks0} shows the confidence contours for $\fnl=0$ mocks when fit is done to the log of mean spectra of $\fnl=0$ mocks for the different regions. We find that the underlying true $\fnl$ value is recovered within $2\sigma$ confidence. \mr{Add a paragraph for the constraining power vs fsky}.
 
-Fig \ref{fig:bestfit_mocks} shows the best fit estimates for $b$ vs $\fnl$ for $\fnl=0$ and $=76.92$ mocks in the left and right, respectively. Truth values are represented via the dotted lines. The points are color-coded with the minimum $\chi^{2}$ from fit for each realization. The histograms of best fit $\fnl$ estimates are plotted in the background.
+Fig \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl$ for $\fnl=0$ and $=76.92$ mocks in the left and right, respectively. Truth values are represented via the dotted lines. The points are color-coded with the minimum $\chi^{2}$ from fit for each realization. The histograms of best-fitting $\fnl$ estimates are plotted in the background.
 
 \begin{table*}
   %\begin{center}
-    \caption{Best fit and marginalized mean estimates for $\fnl$ from fitting the mean power spectrum of the mocks. Degree of freedom is 34 (37 data points - 3 parameters).}   
+    \caption{best-fitting and marginalized mean estimates for $\fnl$ from fitting the mean power spectrum of the mocks. Degree of freedom is 34 (37 data points - 3 parameters).}   
     \label{tab:mocksmcmc}  
    \centerline{%
     \begin{tabular}{llllllll}
@@ -56,7 +56,7 @@ Clean $0$ & DECaLS South &  log$C_{\ell}$& $  0.67$& $  0.67$& $  0.13<\fnl<  1.
     \centering
     \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/bestfit_po100.pdf}         
-    \caption{Best fit estimates from fitting 1000 lognormal mocks with $\fnl=0$ (left) and $76.92$ (right) in the DESI footprint. The truth values are represented by vertical and horizontal lines. The truth values are represented by vertical and horizontal lines. \textcolor{olive}{up and down figures?}}\label{fig:bestfit_mocks}
+    \caption{best-fitting estimates from fitting 1000 lognormal mocks with $\fnl=0$ (left) and $76.92$ (right) in the DESI footprint. The truth values are represented by vertical and horizontal lines. The truth values are represented by vertical and horizontal lines. \textcolor{olive}{up and down figures?}}\label{fig:bestfit_mocks}
 \end{figure*}
 
 
@@ -66,7 +66,7 @@ Clean $0$ & DECaLS South &  log$C_{\ell}$& $  0.67$& $  0.67$& $  0.13<\fnl<  1.
 
 \begin{table*}
   %\begin{center}
-    \caption{Best fit and marginalized estimates for $\fnl$ from fitting the mean power spectrum of the mocks before and after corrections using the nonlinear approach with various combinations of the imaging systematic maps. The estimates are not accounted for over correction, and therefore are subject to mitigation systematics.}   
+    \caption{best-fitting and marginalized estimates for $\fnl$ from fitting the mean power spectrum of the mocks before and after corrections using the non-linear approach with various combinations of the imaging systematic maps. The estimates are not accounted for over correction, and therefore are subject to mitigation systematics.}   
     \label{tab:contmocksmcmc}  
    \centerline{%
     \begin{tabular}{lllllll}
@@ -100,7 +100,7 @@ Contaminated $76.92$ & Nine Maps        & $  4.59$& $  4.58$& $  4.26<\fnl<  4.9
 \begin{figure*}
     \centering
     \includegraphics[width=0.9\textwidth]{figures/clmocks.pdf}
-    \caption{The mean power spectrum of the $\fnl =0$ and $76.9$ mocks with (dashed) and without (solid) imaging systematics before ('No Weight') and after applying the nonlinear cleaning method with three, four, and nine maps. }
+    \caption{The mean power spectrum of the $\fnl =0$ and $76.9$ mocks with (dashed) and without (solid) imaging systematics before ('No Weight') and after applying the non-linear cleaning method with three, four, and nine maps.}
 \end{figure*}
 
 \begin{figure*}
@@ -109,7 +109,7 @@ Contaminated $76.92$ & Nine Maps        & $  4.59$& $  4.58$& $  4.26<\fnl<  4.9
 \includegraphics[width=0.45\textwidth]{figures/mcmc_contnoshift.pdf}
 \includegraphics[width=0.45\textwidth]{figures/mcmcp_cont.pdf}
 \includegraphics[width=0.45\textwidth]{figures/mcmcp_contnoshift.pdf}
-\caption{Probability distributions of $\fnl$ from the mean power spectrum of the $\fnl=0$ (top) and $\fnl=76.9$ (bottom) mocks before and after mitigation with the nonlinear methods using three, four, and nine maps. Left: The posteriors are adjusted to account for the over correction effect. Right: The posteriors are subject to the over correction effect, and thus the scaling of $\fnl$ values is biased due to mitigation.}\label{fig:contmcmc}
+\caption{Probability distributions of $\fnl$ from the mean power spectrum of the $\fnl=0$ (top) and $\fnl=76.9$ (bottom) mocks before and after mitigation with the non-linear methods using three, four, and nine maps. Left: The posteriors are adjusted to account for the over correction effect. Right: The posteriors are subject to the over correction effect, and thus the scaling of $\fnl$ values is biased due to mitigation.}\label{fig:contmcmc}
 \end{figure*}
 
 
